# BGC_Portal/src/app/api/models/member-dto.ts
@@ -4,6 +4,4 @@ export interface MemberDto {
   email?: null | string;
   memberId?: number;
   name?: null | string;
-  password?: null | string;
-  role?: null | string;
 }
