# BGC_WebApi/BGC_DataAccess/Entities/Member.cs
@@ -13,8 +13,8 @@ public class Member
     public int MemberId { get; set; }
     public string Name { get; set; }
     public string Email { get; set; }
-    public string Password { get; set; }
-    public string Role { get; set; }  // TO DO : to change when adding Role&Permission 
+    //public string Password { get; set; }
+    //public string Role { get; set; }  
 
     public ICollection<RpgCampaign> RpgCampaigns { get;set; }
     public ICollection<GameSession> GameSessions { get; set; }
@@ -28,9 +28,9 @@ public class MemberConfiguration : IEntityTypeConfiguration<Member>
     public void Configure(EntityTypeBuilder<Member> builder)
     {
         builder.Property(m => m.Name).IsRequired().HasMaxLength(50);
-        builder.Property(m => m.Password).IsRequired().HasMaxLength(50);
         builder.Property(m => m.Email).IsRequired().HasMaxLength(50);
-        builder.Property(m => m.Role).IsRequired(); // TO DO : to change when adding Role&Permission
+        //builder.Property(m => m.Password).IsRequired().HasMaxLength(50);
+        //builder.Property(m => m.Role).IsRequired(); 
 
     }
 }
